--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.5",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
